
Wishlist & Unresolved
---------------------

* error handling for empty files (no term docs)?
* error handling für empty textvectors?

* maybe GF*IDF boundaries instead of frequency 
  boundaries

* bugfix neccessary: textmatrix with controlled
  vocabulary fails if no term is left

* add phrase detection to textvector function ("my phrase"),
  should not strip any special chars and should stay
  case sensitive (Neal Snider)

* generalise architecture with text-processing chain

* input document sanitizing routines or at least a
  testing environment that can tell which files will
  produce errors.

* corpora package: global weights should always come
  from the original textmatrix, especially when folding
  in additional texts.
  
* corpora package: should decide automatically whether
  it is a textfile, a directory, or a string.

* terms may be ""? terms may be "¤"? Unicode problems!


# # # # # # # # # # # # # # # # # # # # # # # # 
Changes
# # # #

Changes in 0.59
---------------

o   Fridolin Wild (2007-11-28)

	* Dutch stopword list added (thanks to Marco Kalz,
	  Open University Netherlands)
	
	* UTF-8 support enforced in stopword list, package
	  description, textmatrix
	  
	* stemming bug fixed (stemming was _after_
	  filtering by controlled vocabulary
	
	* testing routine added for one-term matrices
	
	* special characters cleaned in textvector()
	

Changes in 0.58
---------------

o   Fridolin Wild (2006-08-01)

    * added simple <XML> tag handling: tags are automatically
      removed (requested by Simon Lin, Northwestern @ Feb 23, 2006)

    * added arabic support for Buckwalter transliterations
	  (requested by Neal Snider, Stanford @ Feb 21, 2006)
	
	* changed textmatrix() / textvector() standard language 
	  to english

    * textmatrix can now automatically remove terms with only
	  numbers (requested by Simon Lin, Northwestern @ Feb 23, 2006)

    * extended special character stripping ('#', '+', ...)
