@@ -198,8 +198,9 @@ unlink(td1, recursive=TRUE)
 # XML/HTML parsing
 
 td1 = tempfile()
-write( c("<html>\n<head></head><body background=\"#FFFFFF\">abc<h1>test></h1></body></html>"), file=td1)
-lsatest( length(rownames(textmatrix(td1, removeXML=TRUE))) == 2, "[textmatrix] - XML removal")
+write( c("<html>\n<head></head><body background=\"#FFFFFF\">&auml;bc<h1>test></h1></body></html>"), file=td1)
+lsatest( length(rownames(textmatrix(td1, removeXML=TRUE, language="german"))) == 2, "[textmatrix] - XML removal")
+lsatest( rownames(textmatrix(td1, removeXML=TRUE, language="german"))[1] == "äbc", "[textmatrix] - html German umlaut replacement")
 unlink(td1)
 
 # -  -  -  -  -  -  -  -  -  -  -  -  -  -  
